nullaway_error_35ff3b78-718e-4037-987e-38697553b809.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/ColorLayer.java:65: error: [NullAway] dereferenced expression this.layer is @Nullable
    final Graphics2D g = this.layer.createGraphics();
                                   ^
    (see http://t.uber.com/nullaway )
